<resources>
    <string name="app_name">AndoImp</string>

    <!--EmptyView 显示内容-->
    <string name="emptyView_mode_desc_fail_title">加载失败</string>
    <string name="emptyView_mode_desc_fail_desc">请检测网络是否能正常连接</string>
    <string name="emptyView_mode_desc_retry">点击重试</string>

    <string name="nav_main">首页</string>
    <string name="nav_pop">框架</string>
    <string name="nav_component">视图</string>
    <string name="start_intent_service">开启IntentService</string>
    <string name="start_service">开启服务</string>
    <string name="stop_service">停止服务</string>
    <string name="bind_service">绑定服务</string>
    <string name="unbind_service">解绑服务</string>
    <string name="change_date_format">更改时间输出格式</string>

    <string name="title_draw_color">drawColor</string>
    <string name="title_draw_circle">drawCircle</string>
    <string name="title_draw_rect">drawRect</string>
    <string name="title_draw_point">drawPoint</string>
    <string name="title_draw_oval">drawOval</string>
    <string name="title_draw_line">drawLine</string>
    <string name="title_draw_round_rect">drawRoundRect</string>
    <string name="title_draw_arc">drawArc</string>
    <string name="title_draw_path">drawPath</string>
    <string name="title_draw_histogram">直方图</string>
    <string name="title_draw_pie_chart">饼图</string>


    <string name="test_string_1">蓝蓝的天上马儿跑，白云下面鲜花飘。</string>
    <string name="login_username">账号/邮箱/手机</string>
    <string name="login_pwd">密码</string>
    <string name="ipc_aidl_bind_service">IPC - AIDL绑定远程服务</string>
    <string name="ipc_aidl_unbind_service">IPC - AIDL解绑远程服务</string>
    <string name="ipc_aidl_bind_service_sys">IPC - AIDL绑定系统服务</string>
    <string name="ipc_aidl_unbind_service_sys">IPC - AIDL解绑系统服务</string>


</resources>
